Bug 508897 - Open Library - Tellico malfunctions when multiple editions have the same ISBN
Summary: Open Library - Tellico malfunctions when multiple editions have the same ISBN
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-29 14:16 UTC by louise.ripley
Modified: 2025-09-04 01:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description louise.ripley 2025-08-29 14:16:56 UTC
SUMMARY
Tellico does not work well when multiple editions of a book have the same ISBN.

Sometimes two editions can have the same ISBN.
For example, when there are alternative covers.


STEPS TO REPRODUCE
1. Create a new book collection
2. In the "Open Library" Data Source options, enable "Updating from source should overwrite user data" and "OpenLibrary Link" field.
2. Add entry from "Internet Search..."
3. Search "2-7316-3159-7"
   Search type: ISBN
   Search source: Open Library
4. Click on the first result, then on the second result.
   First problem: both entries have the same cover, which is not the case on OpenLibrary.
     I think it's already fixed : https://bugs.kde.org/show_bug.cgi?id=507912
   Second problem: one of the two entries does not have the "Authors" and "Comment" fields, even though everything is filled in on OpenLibrary.
5. Add the entry that has the "OpenLibrary Link" : "https://openlibrary.org/books/OL58893423M"
6. Right-click on the entry that has just been added => Update Entry => Open Library
   Third problem: Tellico updated the entry with information from another edition. For example, we can see that the "Edition" and "OpenLibrary Link" fields have been modified.


SOFTWARE/OS VERSIONS
OS: Linux Mint 22.1 (Xia) - Cinnamon
Tellico: 4.1.3
KDE Frameworks: 6.13.0
Qt: Using 6.9.0 and built against 6.9.0
KDE Flatpak runtime (Xcb)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.14.0-28-generic


ADDITIONAL INFORMATION
When updating an entry from the “Open Library” source, perhaps it would be better to reuse the "OpenLibrary Link" field (if populated) to update the edition.
This would ensure that we update the information for the correct edition.
Comment 1 Robby Stephenson 2025-09-01 02:08:00 UTC
Git commit 440a7ec4b3e653ad00f6718a44cb74b4b4a0e7ae by Robby Stephenson.
Committed on 01/09/2025 at 02:07.
Pushed by rstephenson into branch 'master'.

Use OLID to update entry data, when available

FIXED-IN: 4.1.4

M  +1    -0    ChangeLog
M  +5    -1    src/fetch/openlibraryfetcher.cpp
M  +21   -0    src/tests/openlibraryfetchertest.cpp
M  +1    -0    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/440a7ec4b3e653ad00f6718a44cb74b4b4a0e7ae
Comment 2 Robby Stephenson 2025-09-01 02:09:10 UTC
Git commit 419ce3f746accf298ecc7bbd324ec8e4a52d7fe3 by Robby Stephenson.
Committed on 01/09/2025 at 02:08.
Pushed by rstephenson into branch '4.1'.

Use OLID to update entry data, when available

FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +5    -1    src/fetch/openlibraryfetcher.cpp
M  +21   -0    src/tests/openlibraryfetchertest.cpp
M  +1    -0    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/419ce3f746accf298ecc7bbd324ec8e4a52d7fe3
Comment 3 Robby Stephenson 2025-09-04 00:49:32 UTC
Git commit 48ee3c8b57fbe0326f142c08555ea9911c93c84c by Robby Stephenson.
Committed on 04/09/2025 at 00:49.
Pushed by rstephenson into branch 'master'.

Retrieve OpenLibrary authors in one API call

Retain link to OpenLibrary work to facilitate author fetch.

M  +94   -82   src/fetch/openlibraryfetcher.cpp
M  +3    -0    src/fetch/openlibraryfetcher.h
M  +7    -22   src/tests/openlibraryfetchertest.cpp
M  +0    -1    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/48ee3c8b57fbe0326f142c08555ea9911c93c84c
Comment 4 Robby Stephenson 2025-09-04 01:39:44 UTC
Git commit 000e0d6de3d969386fcd7fe54d96b8c895609800 by Robby Stephenson.
Committed on 04/09/2025 at 01:01.
Pushed by rstephenson into branch '4.1'.

Retrieve OpenLibrary authors in one API call

Retain link to OpenLibrary work to facilitate author fetch.

M  +95   -78   src/fetch/openlibraryfetcher.cpp
M  +3    -0    src/fetch/openlibraryfetcher.h
M  +7    -22   src/tests/openlibraryfetchertest.cpp
M  +0    -1    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/000e0d6de3d969386fcd7fe54d96b8c895609800