Retrieve OpenLibrary authors in one API call

Retain link to OpenLibrary work to facilitate author fetch.

BUG: 508897