src/fetch/openlibraryfetcher.cpp
@@ -193,16 +193,16 @@ Tellico::Data::EntryPtr OpenLibraryFetcher::fetchEntryHook(uint uid_) {
 
   // possible that the author is set on the work but not the edition
   // see https://github.com/internetarchive/openlibrary/issues/8144
-  const QString authorString(QStringLiteral("author"));
-  const QString workString(QStringLiteral("openlibrary-work"));
+  const QString authorString = entry->collection()->type() == Data::Collection::ComicBook
+                               ? QStringLiteral("writer")
+                               : QStringLiteral("author");
   if(entry->field(authorString).isEmpty()) {
-    const QString work = entry->field(workString);
+    const QString work = m_workLink.value(uid_);
     if(!work.isEmpty()) {
       const QUrl workUrl(QStringLiteral("https://openlibrary.org%1.json").arg(work));
-      QStringList authors;
       const auto output = FileHandler::readDataFile(workUrl, true /*quiet*/);
 #if 0
-      myWarning() << "Remove debug from openlibraryfetcher.cpp";
+      myWarning() << "Remove debug openlibrary-work from openlibraryfetcher.cpp";
       QFile f(QString::fromLatin1("/tmp/openlibrary-work.json"));
       if(f.open(QIODevice::WriteOnly)) {
         QTextStream t(&f);
@@ -212,24 +212,7 @@ Tellico::Data::EntryPtr OpenLibraryFetcher::fetchEntryHook(uint uid_) {
 #endif
       QJsonDocument doc = QJsonDocument::fromJson(output);
       const auto obj = doc.object();
-      const auto array = obj.value(QLatin1String("authors")).toArray();
-      for(int i = 0; i < array.count(); i++) {
-        const auto key = array.at(i).toObject().value(authorString)
-                                    .toObject().value(QLatin1String("key")).toString();
-        if(m_authorHash.contains(key)) {
-          authors += m_authorHash.value(key);
-          continue;
-        }
-        // now grab author name by key
-        const QUrl authorUrl(QStringLiteral("https://openlibrary.org%1.json").arg(key));
-        const auto output2 = FileHandler::readDataFile(authorUrl, true /*quiet*/);
-        QJsonDocument doc2 = QJsonDocument::fromJson(output2);
-        const auto s = doc2.object().value(QLatin1String("name")).toString();
-        if(!s.isEmpty()) {
-          m_authorHash.insert(key, s);
-          authors += s;
-        }
-      }
+      QStringList authors = getAuthorNames(obj[QLatin1String("authors")].toArray().toVariantList());
       if(!authors.isEmpty()) {
         entry->setField(authorString, authors.join(FieldFormat::delimiterString()));
       }
@@ -251,10 +234,7 @@ Tellico::Data::EntryPtr OpenLibraryFetcher::fetchEntryHook(uint uid_) {
       }
     }
   }
-  // no longer need the field
-  entry->collection()->removeField(workString);
 
-  const QString openlibraryString(QStringLiteral("openlibrary"));
   const QString coverString(QStringLiteral("cover"));
   if(m_imageSize != NoImage && entry->field(coverString).isEmpty()) {
     QString imgSize;
@@ -262,12 +242,12 @@ Tellico::Data::EntryPtr OpenLibraryFetcher::fetchEntryHook(uint uid_) {
       case LargeImage:  imgSize = QLatin1Char('L'); break;
       case MediumImage: imgSize = QLatin1Char('M'); break;
       case SmallImage:  imgSize = QLatin1Char('S'); break;
-      case NoImage: myWarning() << "impossible image size"; break;
+      case NoImage: break;
     }
     QString coverId, imageUrl;
 
     // just want the portion after the last slash
-    QString olid = entry->field(openlibraryString).section(QLatin1Char('/'), -1);
+    const QString olid = m_olidLink.value(uid_).section(QLatin1Char('/'), -1);
     if(!olid.isEmpty()) {
       coverId = olid;
       imageUrl = QStringLiteral("https://covers.openlibrary.org/b/olid/%1-%2.jpg?default=false");
@@ -279,13 +259,6 @@ Tellico::Data::EntryPtr OpenLibraryFetcher::fetchEntryHook(uint uid_) {
       imageUrl = imageUrl.arg(coverId, imgSize);
       entry->setField(coverString, ImageFactory::addImage(QUrl(imageUrl), true));
     }
-  }
-
-  // remove the openlibrary field if undesired
-  if(entry->collection()->hasField(openlibraryString) &&
-     !optionalFields().contains(openlibraryString)) {
-    entry->setField(openlibraryString, QString());
-    entry->collection()->removeField(entry->collection()->fieldByName(openlibraryString));
   }
 
   return entry;
@@ -343,7 +316,7 @@ void OpenLibraryFetcher::slotComplete(KJob* job_) {
 
 #if 0
   myWarning() << "Remove debug from openlibraryfetcher.cpp";
-  QFile f(QString::fromLatin1("/tmp/test.json"));
+  QFile f(QString::fromLatin1("/tmp/openlibrary-result.json"));
   if(f.open(QIODevice::WriteOnly)) {
     QTextStream t(&f);
     t << data;
@@ -354,7 +327,6 @@ void OpenLibraryFetcher::slotComplete(KJob* job_) {
   QJsonDocument doc = QJsonDocument::fromJson(data);
   QJsonArray array = doc.array();
   if(array.isEmpty()) {
-//    myDebug() << "no results";
     endJob(job);
     return;
   }
@@ -365,14 +337,6 @@ void OpenLibraryFetcher::slotComplete(KJob* job_) {
   } else {
     coll = new Data::BookCollection(true);
   }
-  // add a temporary work id field
-  Data::FieldPtr wField(new Data::Field(QStringLiteral("openlibrary-work"), QString()));
-  coll->addField(wField);
-
-  // always set the openlibrary link, removed later if unwanted
-  Data::FieldPtr field(new Data::Field(QStringLiteral("openlibrary"), i18n("OpenLibrary Link"), Data::Field::URL));
-  field->setCategory(i18n("General"));
-  coll->addField(field);
 
   for(int i = 0; i < array.count(); i++) {
     // be sure to check that the fetcher has not been stopped
@@ -395,7 +359,19 @@ void OpenLibraryFetcher::slotComplete(KJob* job_) {
 
     FetchResult* r = new FetchResult(this, entry);
     m_entries.insert(r->uid, entry);
-    emit signalResultFound(r);
+
+    // retain olid and link to parent work
+    m_olidLink.insert(r->uid, mapValue(resultMap, "key"));
+    const auto works = resultMap[QLatin1StringView("works")].toList();
+    if(!works.isEmpty()) {
+      const auto workMap = works.first().toMap();
+      const QString key = mapValue(workMap, "key");
+      if(!key.isEmpty()) {
+        m_workLink.insert(r->uid, key);
+      }
+    }
+
+    Q_EMIT signalResultFound(r);
   }
 
 //  m_start = m_entries.count();
@@ -458,40 +434,23 @@ void OpenLibraryFetcher::populate(Data::EntryPtr entry_, const QVariantMap& map_
   entry_->setField(QStringLiteral("series"), mapValue(map_, "series"));
   entry_->setField(QStringLiteral("pages"), mapValue(map_, "number_of_pages"));
   entry_->setField(QStringLiteral("comments"), mapValue(map_, "notes", "value"));
-  entry_->setField(QStringLiteral("openlibrary"), QLatin1String("https://openlibrary.org") + mapValue(map_, "key"));
 
-  const auto works = map_.value(QLatin1String("works")).toList();
-  if(!works.isEmpty()) {
-    const auto w = works.front().toMap().value(QLatin1String("key")).toString();
-    if(!w.isEmpty()) entry_->setField(QStringLiteral("openlibrary-work"), w);
-  }
-
-  QStringList authors;
-  foreach(const QVariant& authorMap, map_.value(QLatin1String("authors")).toList()) {
-    const QString key = mapValue(authorMap.toMap(), "key");
-    if(m_authorHash.contains(key)) {
-      authors += m_authorHash.value(key);
-    } else if(!key.isEmpty()) {
-      QUrl authorUrl(QString::fromLatin1(OPENLIBRARY_QUERY_URL));
-      QUrlQuery q;
-      q.addQueryItem(QStringLiteral("type"), QStringLiteral("/type/author"));
-      q.addQueryItem(QStringLiteral("key"), key);
-      q.addQueryItem(QStringLiteral("name"), QString());
-      authorUrl.setQuery(q);
-
-      QString output = FileHandler::readTextFile(authorUrl, true /*quiet*/);
-      QJsonDocument doc = QJsonDocument::fromJson(output.toUtf8());
-      QJsonArray array = doc.array();
-      QVariantMap authorResult = array.isEmpty() ? QVariantMap() : array.at(0).toObject().toVariantMap();
-      const QString name = mapValue(authorResult, "name");
-      if(!name.isEmpty()) {
-        authors << name;
-        m_authorHash.insert(key, name);
-      }
+  const QString openlibraryString(QStringLiteral("openlibrary"));
+  if(optionalFields().contains(openlibraryString)) {
+    if(!entry_->collection()->hasField(openlibraryString)) {
+      Data::FieldPtr field(new Data::Field(openlibraryString, i18n("OpenLibrary Link"), Data::Field::URL));
+      field->setCategory(i18n("General"));
+      entry_->collection()->addField(field);
     }
+    entry_->setField(openlibraryString, QLatin1String("https://openlibrary.org") + mapValue(map_, "key"));
   }
+
+  QStringList authors = getAuthorNames(map_[QLatin1StringView("authors")].toList());
   if(!authors.isEmpty()) {
-    entry_->setField(QStringLiteral("author"), authors.join(FieldFormat::delimiterString()));
+    const QString authorString = entry_->collection()->type() == Data::Collection::ComicBook
+                                 ? QStringLiteral("writer")
+                                 : QStringLiteral("author");
+    entry_->setField(authorString, authors.join(FieldFormat::delimiterString()));
   }
 
   QStringList translators;
@@ -535,6 +494,64 @@ void OpenLibraryFetcher::populate(Data::EntryPtr entry_, const QVariantMap& map_
   }
 }
 
+QStringList OpenLibraryFetcher::getAuthorNames(const QVariantList& keys_) {
+  QStringList authors;
+  if(keys_.isEmpty()) {
+    return authors;
+  }
+
+  bool emptyQuery = true;
+  QString authorQuery(QLatin1String("key:("));
+  for(int i = 0; i < keys_.count(); i++) {
+    const auto map = keys_.at(i).toMap();
+    QString key = mapValue(map, "author", "key");
+    if(key.isEmpty()) key = mapValue(map, "key");
+    if(key.isEmpty()) {
+      myDebug() << "Failed to pull key from" << map;
+      continue;
+    }
+    if(!key.startsWith(QLatin1String("/authors/"))) {
+      key = QLatin1String("/authors/") + key;
+    }
+    if(m_authorHash.contains(key)) {
+      authors += m_authorHash.value(key);
+      continue;
+    }
+    authorQuery += key + QLatin1String(" OR ");
+    emptyQuery = false;
+  }
+  if(emptyQuery) {
+    // no need to search further
+    return authors;
+  }
+  // remove final OR and add )
+  authorQuery.chop(4); // " OR "
+  authorQuery += QLatin1Char(')');
+
+  QUrlQuery q;
+  q.addQueryItem(QStringLiteral("q"), authorQuery);
+  q.addQueryItem(QStringLiteral("fields"), QStringLiteral("key,name"));
+  QUrl u(QString::fromLatin1(OPENLIBRARY_AUTHOR_QUERY_URL));
+  u.setQuery(q);
+
+  const auto output = FileHandler::readDataFile(u, true /*quiet*/);
+  const QJsonDocument doc = QJsonDocument::fromJson(output);
+  const auto array = doc.object().value(QLatin1String("docs")).toArray();
+  for(int i = 0; i < array.count(); i++) {
+    const auto map = array.at(i).toObject().toVariantMap();
+    QString key = mapValue(map, "key");
+    if(!key.startsWith(QLatin1String("/authors/"))) {
+      key = QLatin1String("/authors/") + key;
+    }
+    const QString author = mapValue(map, "name");
+    if(!author.isEmpty()) {
+      m_authorHash.insert(key, author);
+      authors += author;
+    }
+  }
+  return authors;
+}
+
 QString OpenLibraryFetcher::getAuthorKeys(const QString& term_) {
   QUrl u(QString::fromLatin1(OPENLIBRARY_AUTHOR_QUERY_URL));
   QUrlQuery q;
@@ -543,7 +560,7 @@ QString OpenLibraryFetcher::getAuthorKeys(const QString& term_) {
   u.setQuery(q);
 
 //  myLog() << "Searching for authors:" << u.toDisplayString();
-  QString output = FileHandler::readTextFile(u, true /*quiet*/, true /*utf8*/);
+  const auto output = FileHandler::readDataFile(u, true /*quiet*/);
 #if 0
   myWarning() << "Remove author debug from openlibraryfetcher.cpp";
   QFile f(QString::fromLatin1("/tmp/test-openlibraryauthor.json"));
@@ -553,7 +570,7 @@ QString OpenLibraryFetcher::getAuthorKeys(const QString& term_) {
   }
   f.close();
 #endif
-  const QJsonDocument doc = QJsonDocument::fromJson(output.toUtf8());
+  const QJsonDocument doc = QJsonDocument::fromJson(output);
   const auto array = doc.object().value(QLatin1String("docs")).toArray();
   if(array.isEmpty()) {
     return QString();
