src/tests/openlibraryfetchertest.h
@@ -43,7 +43,6 @@ private Q_SLOTS:
   void testUpdate();
   void testComic();
   void testBug507912();
-  void testBug508897();
 };
 
 #endif
